# uq-informed-ml-compressor-mapping

./: .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md  case_1_rotary.csv  case_2_scroll.csv  case_3_vi.csv
examples/: example_bnn.py  example_de.py  example_gpr.py
models/: __init__.py  bnn_standard.py  bnn_vi.py  de_standard.py  de_vi.py  gpr_standard.py  gpr_vi.py
